# SolarSystem

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
resources/: color.frag  color.vert  color_instance.vert  globe.mtl  texture.frag  texture.vert  texture_color_mix.frag
resources/shaders/: phong.frag  phong.vert  texture.frag  texture.vert  texture_colormix.frag
src/: main.cpp  meshloader.cpp  meshloader.hpp  renderer.cpp  renderer.hpp  simulation.cpp  simulation.hpp  ui_layer.cpp  ui_layer.hpp
src/core/: camera.cpp  camera.hpp  common.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/glad/: glad.c
src/glad/glad/: glad.h
src/stb/: stb_image.h
